--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,9 @@ body {
         transform: rotate(360deg);
         transition: all 1s cubic-bezier(1, 0, 0, 1); }
     body header h1 {
-      padding-bottom: 20px;
       text-align: center;
-      margin-top: 20px; }
+      margin-top: 20px;
+      padding-bottom: 20px; }
     body header .navbar .navbar-collapse .navbar-nav {
       display: flex;
       justify-content: space-between;
@@ -69,12 +69,10 @@ body {
     background-color: #3F76A6;
     padding: 20px 0px 20px 20px; }
     body footer .textoTres {
-      font-size: 16px;
-      padding-bottom: 5px;
       text-align: center; }
-    body footer .email {
+    body footer .email, body footer .textoTres {
       font-size: 16px;
-      margin-bottom: 8px; }
+      margin-bottom: 5px; }
     body footer #send {
       margin: 0px 0px 20px 8px;
       font-size: 16px;
@@ -85,10 +83,10 @@ body {
       text-transform: uppercase;
       border-radius: 10px; }
     body footer .redesSociales img {
-      width: 50px;
+      margin-bottom: 8px;
       height: 50px;
       padding: 5px;
-      margin-bottom: 8px; }
+      width: 50px; }
     body footer .ultTexto {
       font-size: 14px;
       text-align: center; }
